--- a/base_templates/templates/header.html
+++ b/base_templates/templates/header.html
@@ -6,7 +6,7 @@
             <ul class="nav__items list">
                 <li class="nav__item {% set_activity_class 'index' 'recipe' 'author' %}"><a href={% url 'index' %} class="nav__link link">Рецепты</a></li>
                 <li class="nav__item {% set_activity_class 'subscriptions' %}"><a href={% url 'subscriptions' %} class="nav__link link">Мои подписки</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Создать рецепт</a></li>
+                <li class="nav__item {% set_activity_class 'recipe_new' %}"><a href={% url 'recipe_new' %} class="nav__link link">Создать рецепт</a></li>
                 <li class="nav__item {% set_activity_class 'favorites' %}"><a href={% url 'favorites' %} class="nav__link link">Избранное</a></li>
                 <li class="nav__item"><a href="#" class="nav__link link">Список покупок</a> <span class="badge badge_style_blue nav__badge" id="counter">4</span></li>
             </ul>
@@ -24,6 +24,7 @@
                 <li class="nav__item"><a href="{% url 'signup' %}" class="button button_style_blue">Создать аккаунт</a></li>
             </ul>
             {% endif %}
+            {% csrf_token %}
         </div>
     </nav>
 </header>
