--- a/recipes/templates/follow.html
+++ b/recipes/templates/follow.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{{ title }}{% endblock %}
+{% block title %}Мои подписки{% endblock %}
 {% load static %}
 {% block css %}
     <link rel="stylesheet" href="{% static 'pages/myFollow.css' %}">
@@ -7,11 +7,11 @@
 {% block content %}
     <main class="main container">
         <div class="main__header">
-            <h1 class="main__title">{{ title }}</h1>
+            <h1 class="main__title">Мои подписки</h1>
         </div>
         <div class="card-list">
         {% for author in page %}
-            {% include "follow_card.html" with author=author%}
+            {% include "follow_card.html" with author=author feed_length=feed_length%}
         {% endfor %}   
     </div>
         {% if page.has_other_pages %}
