--- a/recipes/templates/single_page.html
+++ b/recipes/templates/single_page.html
@@ -6,15 +6,17 @@
 {% endblock %}
 {% block content %}
     <main class="main container">
-        <div class="single-card" data-id="recipe.id" data-author="recipe.author.id">
+        <div class="single-card" data-id="{{ recipe.pk }}" data-author="{{recipe.author.id}}">
             <img src="{{ recipe.image.url }}" alt="какой-то текст" class="single-card__image">
             <div class="single-card__info">
                 <div class="single-card__header-info">
                     <h1 class="single-card__title">{{ recipe.title }}</h1>
+                    {% if user.is_authenticated %}
                     <div class="single-card__favorite">
                         <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite icon-favorite_big"></span></button>
                         <div class="single-card__favorite-tooltip tooltip">Добавить в избранное</div>
                     </div>
+                    {% endif %}
                 </div>
                 <ul class="single-card__items">
                     {% for tag in recipe.tags.all %}
@@ -25,13 +27,17 @@
                     <p class="single-card__text"><span class="icon-time"></span> {{ recipe.get_duration }}</p>
                     <ul class="single-card__items">
                         <li class="single-card__item"><p class="single-card__text"><span class="icon-user"></span>{{ recipe.author.first_name }}</p></li>
-                        <li class="single-card__item">  <a style="margin-left: 2.5em" href="#" class="single-card__text">Редактировать рецепт</a></li>
+                        {% if user == recipe.author %}
+                        <li class="single-card__item">  <a style="margin-left: 2.5em" href="edit" class="single-card__text">Редактировать рецепт</a></li>
+                        {% endif %}
                     </ul>
                 </div>
+                {% if user.is_authenticated %}
                 <ul class="single-card__items">
                     <li class="single-card__item"><button class="button button_style_blue" name="purchases" data-out><span class="icon-plus"></span> Добавить в покупки</button></li>
                     <li class="single-card__item"><button class="button button_style_light-blue button_size_subscribe" name="subscribe" data-out>Подписаться на автора</button></li>
                 </ul>
+                {% endif %}
                 <div class="single-card__section">
                     <h3 class="single-card__section-title">Ингридиенты:</h3>
                     <div class="single-card__items single-card__items_column">
