--- a/base_templates/templates/header.html
+++ b/base_templates/templates/header.html
@@ -8,7 +8,7 @@
                 <li class="nav__item {% set_activity_class 'subscriptions' %}"><a href={% url 'subscriptions' %} class="nav__link link">Мои подписки</a></li>
                 <li class="nav__item {% set_activity_class 'recipe_new' %}"><a href={% url 'recipe_new' %} class="nav__link link">Создать рецепт</a></li>
                 <li class="nav__item {% set_activity_class 'favorites' %}"><a href={% url 'favorites' %} class="nav__link link">Избранное</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Список покупок</a> <span class="badge badge_style_blue nav__badge" id="counter">4</span></li>
+                <li class="nav__item {% set_activity_class 'shopping_list' %}"><a href={% url 'shopping_list' %} class="nav__link link">Список покупок</a> <span class="badge badge_style_blue nav__badge" id="counter">{% shopping_list_counter%}</span></li>
             </ul>
             <ul class="nav__items list">
                 <li class="nav__item {% set_activity_class 'password_change' %}"><a href="{% url 'password_change' %}" class="nav__link link">Изменить пароль</a></li>
@@ -17,7 +17,6 @@
             {% else %}
             <ul class="nav__items list">
                 <li class="nav__item nav__item_disabled {% set_activity_class 'index' 'recipe' 'author' %}"><a href={% url 'index' %} class="nav__link link">Рецепты</a></li>
-                <li class="nav__item nav__item_disabled"><a href="#" class="nav__link link">Список покупок</a></li>
             </ul>
             <ul class="nav__items list">
                 <li class="nav__item {% set_activity_class 'login' %}"><a href="{% url 'login' %}" class="nav__link link">Войти</a></li>
