--- a/recipes/templates/follow_card.html
+++ b/recipes/templates/follow_card.html
@@ -21,6 +21,6 @@
             </ul>
         </div>
         <div class="card-user__footer">
-            <button class="button button_style_light-blue button_size_auto" name="subscribe">Отписаться</button>
+            <button  type="submit" class="button button_style_light-blue button_size_auto" name="subscribe">Отписаться</button>
         </div>
     </div>
