--- a/recipes/templates/recipe_card.html
+++ b/recipes/templates/recipe_card.html
@@ -1,10 +1,10 @@
         {% load custom_tags %}
         <div class="card" data-id="{{ recipe.id }}">
             
-            <a href="{% url 'recipe' recipe.id %}" class="link" target="_blank"><img src="{{ recipe.image.url }}" alt="Какой-то текст" class="card__image"></a>
+            <a href="{% url 'recipe' recipe.id %}" class="link"><img src="{{ recipe.image.url }}" alt="Какой-то текст" class="card__image"></a>
             
             <div class="card__body">
-                <a class="card__title link" href="{% url 'recipe' recipe.id %}" target="_blank">{{ recipe.title }}</a>
+                <a class="card__title link" href="{% url 'recipe' recipe.id %}">{{ recipe.title }}</a>
                 <ul class="card__items">
                     {% for tag in recipe.tags.all %}
                     <li class="card__item"><span class="badge badge_style_{{ tag.color }}">{{ tag.title }}</span></li>
