--- a/recipes/templates/shopping_list.html
+++ b/recipes/templates/shopping_list.html
@@ -23,7 +23,7 @@
             </li>
             {% endfor %}
         </ul>
-        <a href="#"><button class="button button_style_blue">Скачать список</button></a>
+        <a href="{% url 'shopping_list_download' %}"><button class="button button_style_blue">Скачать список</button></a>
         {% endif %}
     </div>
     </main>
