--- a/users/templates/registration/password_reset_confirm.html
+++ b/users/templates/registration/password_reset_confirm.html
@@ -11,7 +11,7 @@
         <h1 class="main__title">Введите новый пароль</h1>
     </div>
     <div class="form-container">
-        <form class="form" method="post" action="{% url 'password_reset_confirm' %}">
+        <form class="form">
             {% csrf_token %}
             {% for field in form %}
                 <div class="form__group">
